[package]
name = "sp-core"
version = "0.1.0"
authors = ["costa-wang <3162284013@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitive-types = { version = "0.7.0", default-features = false, features = ["codec"] }
hash-db = { version = "0.15.2", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }