[package]
name = "sp-trie"
version = "0.1.0"
authors = ["Administrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
trie-db = { version = "0.20.0", default-features = false }
trie-root = { version = "0.16.0", default-features = false }
memory-db = { version = "0.20.0", default-features = false }
sp-core = { default-features = false, path = "../core" }

[dev-dependencies]
trie-standardmap = "0.15.2"
hex-literal = "0.2.1"
